--- a/Quiz 1 - Softmax p1.ipynb
+++ b/Quiz 1 - Softmax p1.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SOFTMAX\n",
+    "\n",
+    "a function that turns a classidier scores into probabilities"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
@@ -26,18 +35,19 @@
     }
    ],
    "source": [
-    "# softmax\n",
-    "# - funtion to turn classifier scores into probablities\n",
-    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "# create array for a sinlge multiclassifier\n",
-    "scores = np.array([1.0, 2.0, 3.0])\n",
+    "# create array for a multiclassifier output (logits) for a single user\n",
+    "scores = np.array([3.0, 1.0, 2.0])\n",
     "\n",
     "# define softmax function\n",
     "def softmax(x):\n",
+    "    '''\n",
+    "    sum exp of all scores for denominator\n",
+    "    exp of scores divided by denominator to get probability score for each class\n",
+    "    '''\n",
     "    return np.exp(x)/sum(np.exp(x))\n",
     "\n",
     "# print softmax scores\n",
@@ -81,6 +91,96 @@
     "                   [3, 8, 7, 6]])\n",
     "\n",
     "print(softmax(scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.90030573  2.44728471  6.65240956]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multiply by 10 scores get further apart\n",
+    "\n",
+    "scores = np.array([3.0, 1.0, 2.0])\n",
+    "print(softmax(scores)*10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.00900306  0.02447285  0.0665241 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# divide by 10 scores get closer together\n",
+    "scores = np.array([3.0, 1.0, 2.0])\n",
+    "print(softmax(scores)/10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ONE HOT ENCODING\n",
+    "\n",
+    "an array to depict whether an observation falls within a class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.66524096  0.09003057  0.24472847]\n",
+      "[ 1.  0.  0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = np.array([3.0, 1.0, 2.0])\n",
+    "print(softmax(scores))\n",
+    "\n",
+    "# one hot encoding for single user where ther are in class 1\n",
+    "labels = np.array([1.0, 0.0, 0.0])\n",
+    "print(labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CROSS ENTROPY\n",
+    "\n",
+    "formula to measure the distance (difference) between the softmax scores and the one hot encoding\n",
+    "- generally what is optimised (minimised)\n",
+    "- optimised by gradients decent\n",
+    "- take derivates of the weights till minimum reach\n"
    ]
   },
   {
